# artquery

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt
artquery/: asgi.py  manage.py  settings.py  wsgi.py
artquery/accounts/: apps.py  urls.py
artquery/accounts/managers/: accounts.py
artquery/accounts/migrations/: 0001_initial.py
artquery/accounts/models/: accounts.py
artquery/accounts/serializers/: accounts.py
artquery/accounts/views/: accounts.py
artquery/artquery/: asgi.py  urls.py  wsgi.py
artquery/artquery/settings/: __init__.py  base.py  envvars.py  logging.py  rest_framework.py
artquery/authentication/: apps.py  urls.py
artquery/authentication/backends/: backends.py
artquery/authentication/forms/: login.py
artquery/authentication/serializers/: login.py
artquery/authentication/views/: login.py
artquery/general/utils/: cryptography.py  types.py
artquery/static/css/: querygenerator.css.map
artquery/templates/: index.html  layout.html
artquery/templates/accounts/: register.html
artquery/users/: apps.py  urls.py
artquery/users/forms/: __init__.py  users.py
artquery/users/managers/: users.py
artquery/users/migrations/: 0002_alter_customuser_options_alter_customuser_id.py
artquery/users/serializers/: users.py
artquery/users/urls/: api_urls.py  simple_urls.py
artquery/users/views/: users.py
backend/: manage.py
backend/artquery/: apps.py
backend/authentication/: apps.py  urls.py
backend/authentication/backends/: backends.py  jwt.py
backend/authentication/forms/: __init__.py  login.py
backend/authentication/serializers/: login.py
backend/authentication/urls/: api_urls.py  web_urls.py
backend/core/: urls.py
backend/general/: constants.py  middleware.py
backend/templates/: layout.html
backend/users/: admin.py  apps.py  urls.py
core/artquery/: asgi.py  settings.py  urls.py  wsgi.py
querygenerator/: forms.py  urls.py  views.py
querygenerator/migrations/: 0001_initial.py
querygenerator/templates/: index.html  login.html  register.html
querygenerator/tests/: test_forms.py  test_views.py
(+49 files in other folders)
