[tool.poetry]
name = "artquery"
version = "1.8.3"
description = ""
authors = ["ThASh42 <thashmail42@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "artquery"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
django-filter = "^24.3"
pyyaml = "^6.0.1"
django-split-settings = "^1.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
mypy = "^1.11.2"
types-pyyaml = "^6.0.12.20240808"
colorlog = "^6.8.2"
django-cors-headers = "^4.4.0"
pydantic = "^2.9.2"
pynacl = "^1.5.0"
coverage = "^7.6.4"

[tool.isort]
multi_line_output = 5
line_length = 79

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 79
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
